syntax = "proto3";

package personal;
option java_package = "com.wanfang.personal";
option objc_class_prefix = "WFPR";


// 找回(获取)密码请求--通过邮箱
message PasswordByEmailRequest {
	oneof field_oneof {
		// 用户名和邮箱地址只需要其中之一
		string user_name = 3; // 用户名
		string email = 4; // 邮箱地址
	}
}
// 找回(获取)密码返回--通过邮箱
message PasswordByEmailResponse {
	string email = 1; // 用户邮箱 用于确认信息
	string user_name = 2; // 用户名 用于确认信息
}

message PasswordEmailRequest {
	string email = 1; // 邮箱地址（发送重置密码链接）
}
message PasswordEmailResponse {

}

// 找回(获取)密码请求--通过手机号
message PasswordByPhoneRequest {
	string phone = 1; // 
	string new_password = 2; // 新密码
	string phone_captcha = 3; // 短信验证码
}

message PasswordByPhoneResponse {
	string user_id = 1;
}













